Applied automated code quality suggestions